syntax = "proto3";
package vpower;
option go_package = "github.com/beatoz/beatoz-go/ctrlers/vpower";

message powerChunkProto {
  int64 power = 1;
  int64 height = 2;
  bytes tx_hash = 3;
}
message VPowerProto {
  int64 sum_power = 1;
  repeated powerChunkProto power_chunks = 2;
}
message FrozenVPowerProto {
  int64 refund_power = 1;
  repeated powerChunkProto power_chunks = 2;
}